--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@solid-primitives/storage": "^1.3.3",
     "solid-app-router": "^0.4.2",
+    "solid-forms": "^0.4.6",
     "solid-js": "^1.6.6"
   }
 }
